# playwright-pytest-hatch-tutorial

./: .gitignore  INSTALLATION.md  LESSONS_LEARNED.md  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci-sonarqube.yml  playwright-tests.yml
allure-report/: index.html
allure-report/export/: influxDbData.txt
docs/: 02-hatch-configuration.md  README.md
src/tutorial_tests/pages/: base_page.py  inventory_page.py  login_page.py
src/tutorial_tests/utils/: validators.py
tests/: conftest.py  test_saucedemo.py
tests/e2e/: conftest.py  test_inventory.py  test_login.py
tests/unit/: test_validators.py
